--- a/Super/html.html
+++ b/Super/html.html
@@ -3,55 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <style>
-        table {
-            width: 50%;
-            border-collapse: collapse;
-            margin: 30px auto;
-            background-color: aqua;
-        }
-
-        th,
-        td {
-            border: 1px solid #000;
-            padding: 8px 12px;
-            text-align: center;
-        }
-
-        th {
-            background-color: #e0e0e0;
-        }
-
-        caption {
-            font-size: 1.3em;
-            margin-bottom: 10px;
-        }
-    </style>
+    <title>Biodata Diri</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>Nama</th>
-                <th>Umur</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Ani</td>
-                <td>22</td>
-            </tr>
-            <tr>
-                <td>Bambang</td>
-                <td>28</td>
-            </tr>
-            <tr>
-                <td>Citra</td>
-                <td>19</td>
-            </tr>
-        </tbody>
-    </table>
+<body
+    class="bg-gradient-to-r from-blue-100 via-purple-100 to-pink-100 min-h-screen flex items-center justify-center font-sans">
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl bg-white shadow-2xl rounded-2xl overflow-hidden p-8">
+
+        <!-- Foto -->
+        <div class="flex justify-center items-center">
+            <img src="yuda.jpg" alt="Foto Diri"
+                class="rounded-xl shadow-lg w-64 h-auto object-cover border border-gray-300">
+        </div>
+
+        <!-- Tabel Biodata -->
+        <div>
+            <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center md:text-left">Biodata Diri</h1>
+            <table class="table-auto w-full text-left border border-gray-300 rounded-lg overflow-hidden">
+                <tbody>
+                    <tr class="hover:bg-gray-100 transition">
+                        <th class="p-3 bg-gray-200 w-1/3">Nama</th>
+                        <td class="p-3">DIKY YUDHA PRATAMA</td>
+                    </tr>
+                    <tr class="hover:bg-gray-100 transition">
+                        <th class="p-3 bg-gray-200">Tempat, Tanggal Lahir</th>
+                        <td class="p-3">BANDAR LAMPUNG, 02 MARET 2003</td>
+                    </tr>
+                    <tr class="hover:bg-gray-100 transition">
+                        <th class="p-3 bg-gray-200">Jenis Kelamin</th>
+                        <td class="p-3">Laki-laki</td>
+                    </tr>
+                    <tr class="hover:bg-gray-100 transition">
+                        <th class="p-3 bg-gray-200">Alamat</th>
+                        <td class="p-3">Jl. KYAI RADEN SAHID, NGLUWAR, MAGELANG</td>
+                    </tr>
+                    <tr class="hover:bg-gray-100 transition">
+                        <th class="p-3 bg-gray-200">Email</th>
+                        <td class="p-3">dikyyudhapratama53@email.com</td>
+                    </tr>
+                    <tr class="hover:bg-gray-100 transition">
+                        <th class="p-3 bg-gray-200">Telepon</th>
+                        <td class="p-3">0895-1885-0006</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 </body>
 
 </html>
