--- a/NotFound/Htlmsederhana.html
+++ b/NotFound/Htlmsederhana.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biodata Mahasiswa</title>
 
-  <!--Tambahkan Bootstrap CSS-->
+  <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
