--- a/NotFound/Htlmsederhana.html
+++ b/NotFound/Htlmsederhana.html
@@ -62,7 +62,7 @@
               </tr>
               <tr>
                 <th scope="row">Email</th>
-                <td>nasyakemal@Gmail.com</td>
+                <td>nasyakemal@gmail.com</td>
               </tr>
               <tr>
                 <th scope="row">No. HP</th>
