--- a/kel_666/666.html
+++ b/kel_666/666.html
@@ -9,7 +9,8 @@
             background-color: #eef2f3;
             padding: 20px;
         }
-        .biodata-container {
+
+        .biodata-container, #formContainer {
             background-color: #fff;
             padding: 20px;
             margin-bottom: 30px;
@@ -19,38 +20,114 @@
             margin-right: auto;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
+
         h2 {
             text-align: center;
             color: #333;
         }
+
         table {
             width: 100%;
             margin-top: 15px;
         }
+
         td {
             padding: 8px;
             vertical-align: top;
         }
+
         td.label {
             font-weight: bold;
             width: 40%;
         }
+
+        .text-font-color {
+            transition: color 0.3s ease;
+        }
+
+        input, button {
+            width: 100%;
+            padding: 8px;
+            margin: 8px 0;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="biodata-container">
-        <h2>Biodata 1 - Muhammad Dheo Adji Duniawan</h2>
-        <table>
-            <tr><td class="label">Nama</td><td>: Muhammad Dheo Adji Duniawan</td></tr>
-            <tr><td class="label">TTL</td><td>: Yogyakarta, 25 Juli 2005</td></tr>
-            <tr><td class="label">Jenis Kelamin</td><td>: Laki-laki</td></tr>
-            <tr><td class="label">Alamat</td><td>: Demangan GK i no.200</td></tr>
-            <tr><td class="label">Agama</td><td>: Islam</td></tr>
-            <tr><td class="label">Hobi</td><td>: Play Footbal</td></tr>
-            <tr><td class="label">Email</td><td>: m.dheo008@gmail.com</td></tr>
-        </table>
-    </div>
+<!-- Biodata -->
+<div class="biodata-container">
+    <h2 class="text-font-color">Biodata 1 - Muhammad Dheo Adji Duniawan</h2>
+    <table>
+        <tr><td class="label text-font-color">Nama</td><td class="text-font-color">: Muhammad Dheo Adji Duniawan</td></tr>
+        <tr><td class="label text-font-color">TTL</td><td class="text-font-color">: Yogyakarta, 25 Juli 2005</td></tr>
+        <tr><td class="label text-font-color">Jenis Kelamin</td><td class="text-font-color">: Laki-laki</td></tr>
+        <tr><td class="label text-font-color">Alamat</td><td class="text-font-color">: Demangan GK i no.200</td></tr>
+        <tr><td class="label text-font-color">Agama</td><td class="text-font-color">: Islam</td></tr>
+        <tr><td class="label text-font-color">Hobi</td><td class="text-font-color">: Play Football</td></tr>
+        <tr><td class="label text-font-color">Email</td><td class="text-font-color">: m.dheo008@gmail.com</td></tr>
+    </table>
+</div>
+
+<!-- Tombol ubah warna -->
+<div class="biodata-container" style="text-align: center;">
+    <button type="button" id="changeColorBtn">Ubah Warna Teks</button>
+</div>
+
+<!-- Tempat Form akan dimunculkan -->
+<div id="formContainer"></div>
+
+<script>
+    // Ganti warna teks
+    const changeColorBtn = document.getElementById('changeColorBtn');
+    const textElements = document.querySelectorAll('.text-font-color');
+    const colors = ['red', 'green', 'blue', 'purple', 'indigo'];
+    let colorIndex = 0;
+
+    changeColorBtn.addEventListener('click', () => {
+        textElements.forEach(element => {
+            element.style.color = colors[colorIndex];
+        });
+        colorIndex = (colorIndex + 1) % colors.length;
+    });
+
+    // Buat form menggunakan JavaScript
+    const form = document.createElement('form');
+
+    const inputNama = document.createElement('input');
+    inputNama.type = 'text';
+    inputNama.name = 'nama';
+    inputNama.placeholder = 'Nama Anda';
+
+    const inputEmail = document.createElement('input');
+    inputEmail.type = 'email';
+    inputEmail.name = 'email';
+    inputEmail.placeholder = 'Email Anda';
+
+    const submitBtn = document.createElement('button');
+    submitBtn.type = 'submit';
+    submitBtn.textContent = 'Kirim';
+
+    form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        alert(`Nama: ${inputNama.value}\nEmail: ${inputEmail.value}`);
+    });
+
+    form.appendChild(inputNama);
+    form.appendChild(inputEmail);
+    form.appendChild(submitBtn);
+
+    document.getElementById('formContainer').appendChild(form);
+</script>
 
 </body>
 </html>
