--- a/Super/html.html
+++ b/Super/html.html
@@ -77,7 +77,7 @@
         // Script untuk mengganti gambar
         const changeImageBtn = document.getElementById('changeImageBtn');
         const fotoDiri = document.getElementById('fotoDiri');
-        const imageSources = ['yuda.jpg', 'yuda2.jpg', 'yuda3.jpg']; // Ganti dengan path foto Anda
+        const imageSources = ['yuda.jpg', 'foto1.jpeg', 'f1.jpg']; // Ganti dengan path foto Anda
         let imageIndex = 0;
 
         changeImageBtn.addEventListener('click', () => {
