--- a/NotFound/Htlmsederhana.html
+++ b/NotFound/Htlmsederhana.html
@@ -5,34 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biodata Mahasiswa</title>
 
-  <!--Tambahkan Bootstrap CSS-->
+  <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     body {
-      background-color: #c48c25;
+      background-color: #cdf80a;
     }
     .profile-photo img {
       width: 150px;
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #d3a614;
+      border: 4px solid #d33c0d;
     }
   </style>
 </head>
 <body>
 
-  <div class="container py-5">
+  <div class="container py-5"> 
     <h2 class="text-center mb-4">BIODATA MAHASISWA</h2>
     <div class="card shadow rounded p-4 mx-auto" style="max-width: 800px; background-color: #df4040;">
       <div class="row g-4">
-        <!-- Foto Profil -->
+        <!--Foto Profil-->
         <div class="col-md-4 d-flex justify-content-center align-items-center profile-photo">
           <img src="https://assets.kompasiana.com/items/album/2023/05/15/9a24d48eafa6ba090c13cb91bcda5323-6462152e08a8b53812152342.jpg?t=o&v=300" alt="Foto Profil">
         </div>
 
-        <!-- Informasi Biodata -->
+        <!--Informasi Biodata-->
         <div class="col-md-8">
           <table class="table table-borderless">
             <tbody>
