--- a/kel_666/naldo_ganteng.html
+++ b/kel_666/naldo_ganteng.html
@@ -1,77 +1,155 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>KTP ID Card</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f1f1f1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+  <meta charset="UTF-8" />
+  <title>KTP ID Card</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f1f1f1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 40px;
+      padding: 40px;
+      flex-wrap: wrap;
+    }
 
-        .ktp-card {
-            width: 500px;
-            padding: 20px;
-            background-color: #e6f0ff;
-            border: 2px solid #000080;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
-        }
+    .ktp-card {
+      width: 500px;
+      padding: 20px;
+      background-color: #e6f0ff;
+      border: 2px solid #000080;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    }
 
-        .ktp-header {
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            color: #000080;
-            margin-bottom: 10px;
-        }
+    .ktp-header {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: #000080;
+      margin-bottom: 10px;
+    }
 
-        .ktp-photo {
-            float: right;
-            width: 120px;
-            height: 150px;
-            margin-left: 10px;
-            border: 1px solid #999;
-            border-radius: 4px;
-            object-fit: cover;
-        }
+    .ktp-photo {
+      float: right;
+      width: 120px;
+      height: 150px;
+      margin-left: 10px;
+      border: 1px solid #999;
+      border-radius: 4px;
+      object-fit: cover;
+    }
 
-        .ktp-info {
-            font-size: 14px;
-            line-height: 1.6;
-        }
+    .ktp-info {
+      font-size: 14px;
+      line-height: 1.6;
+    }
 
-        .ktp-info span {
-            display: inline-block;
-            width: 140px;
-            font-weight: bold;
-        }
+    .ktp-info span {
+      display: inline-block;
+      width: 140px;
+      font-weight: bold;
+    }
 
-        .clear {
-            clear: both;
-        }
-    </style>
+    .clear {
+      clear: both;
+    }
+
+    .form-container {
+      width: 350px;
+      padding: 20px;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-container label {
+      font-weight: bold;
+    }
+
+    .form-container input,
+    .form-container textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    .form-container button {
+      background-color: #000080;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .form-container button:hover {
+      background-color: #0000cc;
+    }
+
+    #output {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
 
-<div class="ktp-card">
+  <div class="ktp-card">
     <div class="ktp-header">YOGYAKARTA</div>
-    <img src="naldo.jpg" alt="Foto KTP" class="ktp-photo">
+    <img src="naldo.jpg" alt="Foto KTP" class="ktp-photo" />
 
     <div class="ktp-info">
-        
-        <p><span>Nama</span>: TIQRISMAN REINALDO TOSAE</p>
-        <p><span>NIM</span>: 231054023</p>
-        <p><span>Tempat/Tgl Lahir</span>: KOROLAMA, 11 Januari 2004</p>
-        <p><span>Jenis Kelamin</span>: Laki-laki</p>
-        <p><span>Alamat</span>: Yogyakarta</p>
+      <p><span>Nama</span>: TIQRISMAN REINALDO TOSAE</p>
+      <p><span>NIM</span>: 231054023</p>
+      <p><span>Tempat/Tgl Lahir</span>: KOROLAMA, 11 Januari 2004</p>
+      <p><span>Jenis Kelamin</span>: Laki-laki</p>
+      <p><span>Alamat</span>: Yogyakarta</p>
     </div>
     <div class="clear"></div>
-</div>
+  </div>
+
+  <div class="form-container">
+    <form id="kontakForm">
+      <label for="nama">Nama:</label>
+      <input type="text" id="nama" name="nama" />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" />
+
+      <label for="pesan">Pesan:</label>
+      <textarea id="pesan" name="pesan" rows="4"></textarea>
+
+      <button type="button" onclick="kirimForm()">Kirim</button>
+    </form>
+
+    <div id="output"></div>
+  </div>
+
+  <script>
+    function kirimForm() {
+      const nama = document.getElementById('nama').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const pesan = document.getElementById('pesan').value.trim();
+
+      if (!nama || !email || !pesan) {
+        alert('Semua kolom wajib diisi!');
+        return;
+      }
+
+      document.getElementById('output').innerHTML = `
+        <strong>Terima kasih, ${nama}!</strong><br>
+        Email: ${email}<br>
+        Pesan: ${pesan}
+      `;
+    }
+  </script>
 
 </body>
 </html>
