--- a/kel_ayam_krispi/TUGAS_FRIENA/BySeptianur.html
+++ b/kel_ayam_krispi/TUGAS_FRIENA/BySeptianur.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
     <meta charset="UTF-8">
     <title>ANGGOTA TEAM</title>
     <link rel="stylesheet" type="text/css" href="style/style.css" />
-
 </head>
-
 <body>
     <body>
         <div class="welcome-container">
-            <img class="team-photo" src="style/photo_2023-09-04_10-14-19.jpg" alt="Foto Haerin">
+            <img class="team-photo" src="C:\Users\Lenovo\Downloads\WhatsApp Image 2025-05-09 at 17.33.32.jpeg" alt="Foto septi">
             <h1>Profil Anggota Team</h1>
-            <p><strong>Nama:</strong> Friena Sellisya Saputri </p>
-            <p><strong>NIM:</strong> 231057020</p>
+            <p><strong>Nama:</strong> Nuraeni septia </p>
+            <p><strong>NIM:</strong> 231057022</p>
             <p><strong>Semester:</strong> 4 </p>
-            <p><strong>Intro:</strong> Perkenalkan nama saya Friena, saat ini saya sedang menempuh pendidikan di Universitas AKPRIND Indonesia jurusan Informatika. Salam kenal semuaa :D</p>
-            
+            <p><strong>Intro:</strong> Perkenalkan nama saya Septia, saat ini saya sedang menempuh pendidikan di Universitas AKPRIND Indonesia jurusan Informatika. Salam kenal semuaa :D</p>
+
             <div class="button-group">
                 <a href="ByNingsiUskenat.html">Profil Ningsih</a>
                 <a href="Bybublebible.html">Profil Friena</a>
